# DocuMind

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: codeql.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/auth/: database.py  schemas.py  security.py
backend/auth/routers/: auth.py
backend/routers/: document.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/legal/: page.tsx
frontend/src/app/login/: LoginForm.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: SignupForm.tsx  page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: AuthFormMessage.tsx  AuthModal.tsx  AuthModalContext.tsx  ChatApp.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LogoMark.tsx  Navbar.tsx  ThemeProvider.tsx
frontend/src/lib/: auth.ts
