[project]
name = "unstructured-io-document-processing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "tesseract>=0.1.3",
    "unstructured[pdf]>=0.22.31",
    "uvicorn>=0.48.0",
]
